@@ -1,5 +1,6 @@
 package org.pg;
 
+import java.util.Collections;
 import java.util.List;
 
 public final class Main {
@@ -63,14 +64,17 @@ public final class Main {
 
         // System.out.println(conn.execute(""));
 
-        PreparedStatement ps = conn.prepare("select $1::int as foo");
-        List<Object> params = List.of(1);
+        String query = "select '1 year 1 second'::interval as interval";
+        // "select $1::int as foo, 'test' as string, 42 as num, now() as now"
+        PreparedStatement ps = conn.prepare(query);
+        // List<Object> params = List.of(1);
+        List<Object> params = Collections.emptyList();
         Object res2 = conn.executeStatement(ps, ExecuteParams.builder().params(params).build());
         conn.closeStatement(ps);
-        System.out.println(res2);
+        System.out.println(res2.toString());
 
-          Object res3 = conn.execute("select 'ёёёё'::char as char");
-          System.out.println(res3);
+          //Object res3 = conn.execute("select 'ёёёё'::char as char");
+          //System.out.println(res3);
 
 //        Object res4 = conn.execute(
 //                "select $1::char as char",
@@ -81,11 +85,11 @@ public final class Main {
 //        conn.query("create type type_foo as enum ('foo', 'bar', 'kek')");
 //        conn.query("create table aaa (id integer, foo type_foo)");
 //        conn.query("insert into aaa values (1, 'foo'), (2, 'bar')");
-        System.out.println(conn.execute(
-                "select * from aaa",
-                ExecuteParams.builder().binaryDecode(true).build()
-                )
-        );
+//        System.out.println(conn.execute(
+//                "select * from aaa",
+//                ExecuteParams.builder().binaryDecode(true).build()
+//                )
+//        );
 
         // conn.execute("create table abc (id integer, title text)");
 //        Object resIns = conn.execute(
